# CSMMateROVJetson

./: .gitignore  OBJECTIVES.txt  OpenCVTesting.py  README.md  ROVMap.py  TensorFlowTesting.py  TensorRTTesting.py  ThreadingStreams.py  cameratest.py  cameratestclient.py  cameratestserver.py  test.py  test2.py
Camera and Camera Related Stuff/: cameratest.py
DriverStation/: CameraDriver.py  CameraGUIDriver.py  CameraServer.py  ControllerClient.py  Controls.py  DriverStation.py  DriverStationMap.py  IMU.py  Logger.py  __main__.py  temp.py
DriverStation 2020-2021/: CameraDriver.py
DriverStation 2021-2022/: README.txt
DriverStation Rewrite/: README.txt  __main__.py  test.py
ROV/: Cameras.py  Component.py  Controller.py  ControllerServer.py  Drive.py  IMU.py  Logger.py  Manip.py  MicroROV.py  ROV.py  ROVMap.py  __main__.py  test.py  xbox.py
ROV 2020-2021/: __main__.py
ROV 2021-2022/: OBJECTIVES.txt  Shitlist.txt  TODO.txt  __main__.py  run.py
ROV 2021-2022 CPP Rewrite/: CMakeLists.txt
ROV 2021-2022 CPP Rewrite/src/: CMakeLists.txt  Controller.cpp  Controller.h
ROV 2021-2022 CPP Rewrite/src/Components/: Drive.cpp
ROV 2021-2022 CPP Rewrite/src/Tools/: Vector3D.h
ROV Rewrite/cpp version/: CMakeLists.txt  Component.hpp  Drive.cpp  README.txt  ROV.cpp
Research and Replaced Code/: CameraGUIDriver.py  ControllerTest.py  Joystick_Arm_Code_0.ino  ManipulatorTest.py  NewManipTest.py  NewThrusterTest.py  ThrusterTest.py  injetson.txt  virtual machine.txt
Robot/: Component.py  Drive.py  Logger.py  Robot.py  __main__.py
python video stream/: client.py
(+146 files in other folders)
